--- a/references.bib
+++ b/references.bib
@@ -195,7 +195,7 @@
 }
 
 @thesis{rubenzahl2018,
-  author      = {Rubenzahl, Ryan},
+  author      = {{Rubenzahl}, Ryan},
   institution = {University of Rochester},
   location    = {Rochester, NY},
   date        = {2018-05},
@@ -213,7 +213,7 @@
 }
 
 @thesis{wasserman2021,
-  author      = {Wasserman, Amanda},
+  author      = {{Wasserman}, A.},
   institution = {University of Rochester},
   location    = {Rochester, NY},
   date        = {2021-05},
@@ -222,11 +222,11 @@
 }
 
 @thesis{Sepeku2022,
-  author      = {Sepeku, Edmund},
+  author      = {{Sepeku}, E.},
   institution = {University of Rochester},
   location    = {Rochester, NY},
   date        = {2022-05},
-  title       = {--},
+  title       = {Spectroscopic Identification of Supernova In DESI},
   type        = {Bachelor's Thesis},
 }
 
@@ -438,3 +438,106 @@
   volume       = {2016},
 }
 
+
+ @misc{TNS, 
+     title={Transient Name Server}, 
+     url={https://www.wis-tns.org/stats-maps}, 
+     journal={TNS},
+     date={2015}
+ } 
+
+‌
+
+
+@misc{DESIpresentation,
+	author = {BenZvi, S. and Tiwari, V. and Wasserman, A.},
+	date-added = {2023-05-04 16:51:55 -0400},
+	date-modified = {2023-05-04 16:53:07 -0400},
+	howpublished = {Presentation},
+	month = {12},
+	title = {Discovering Transients (\& other interesting things) in DESI Spectra},
+	year = {2020}
+ }
+
+@misc{hahn2022,
+      title={DESI Bright Galaxy Survey: Final Target Selection, Design, and Validation}, 
+      author={ChangHoon Hahn and Michael J. Wilson and Omar Ruiz-Macias and Shaun Cole and David H. Weinberg and John Moustakas and Anthony Kremin and Jeremy L. Tinker and Alex Smith and Risa H. Wechsler and Steven Ahlen and Shadab Alam and Stephen Bailey and David Brooks and Andrew P. Cooper and Tamara M. Davis and Kyle Dawson and Arjun Dey and Biprateep Dey and Sarah Eftekharzadeh and Daniel J. Eisenstein and Kevin Fanning and Jaime E. Forero-Romero and Carlos S. Frenk and Enrique Gaztañaga and Satya Gontcho A Gontcho and Julien Guy and Klaus Honscheid and Mustapha Ishak and Stéphanie Juneau and Robert Kehoe and Theodore Kisner and Ting-Wen Lan and Martin Landriau and Laurent Le Guillou and Michael E. Levi and Christophe Magneville and Paul Martini and Aaron Meisner and Adam D. Myers and Jundan Nie and Peder Norberg and Nathalie Palanque-Delabrouille and Will J. Percival and Claire Poppett and Francisco Prada and Anand Raichoor and Ashley J. Ross and Sasha Safonova and Christoph Saulder and Eddie Schlafly and David Schlegel and David Sierra-Porta and Gregory Tarle and Benjamin A. Weaver and Christophe Yèche and Pauline Zarrouk and Rongpu Zhou and Zhimin Zhou and Hu Zou},
+      year={2022},
+      eprint={2208.08512},
+      archivePrefix={arXiv},
+      primaryClass={astro-ph.CO}
+}
+
+@misc{desicollaboration2016,
+      title={The DESI Experiment Part I: Science,Targeting, and Survey Design}, 
+      author={{DESI Collaboration} and Amir Aghamousa and Jessica Aguilar and Steve Ahlen and Shadab Alam and Lori E. Allen and Carlos Allende Prieto and James Annis and Stephen Bailey and Christophe Balland and Otger Ballester and Charles Baltay and Lucas Beaufore and Chris Bebek and Timothy C. Beers and Eric F. Bell and José Luis Bernal and Robert Besuner and Florian Beutler and Chris Blake and Hannes Bleuler and Michael Blomqvist and Robert Blum and Adam S. Bolton and Cesar Briceno and David Brooks and Joel R. Brownstein and Elizabeth Buckley-Geer and Angela Burden and Etienne Burtin and Nicolas G. Busca and Robert N. Cahn and Yan-Chuan Cai and Laia Cardiel-Sas and Raymond G. Carlberg and Pierre-Henri Carton and Ricard Casas and Francisco J. Castander and Jorge L. Cervantes-Cota and Todd M. Claybaugh and Madeline Close and Carl T. Coker and Shaun Cole and Johan Comparat and Andrew P. Cooper and M. -C. Cousinou and Martin Crocce and Jean-Gabriel Cuby and Daniel P. Cunningham and Tamara M. Davis and Kyle S. Dawson and Axel de la Macorra and Juan De Vicente and Timothée Delubac and Mark Derwent and Arjun Dey and Govinda Dhungana and Zhejie Ding and Peter Doel and Yutong T. Duan and Anne Ealet and Jerry Edelstein and Sarah Eftekharzadeh and Daniel J. Eisenstein and Ann Elliott and Stéphanie Escoffier and Matthew Evatt and Parker Fagrelius and Xiaohui Fan and Kevin Fanning and Arya Farahi and Jay Farihi and Ginevra Favole and Yu Feng and Enrique Fernandez and Joseph R. Findlay and Douglas P. Finkbeiner and Michael J. Fitzpatrick and Brenna Flaugher and Samuel Flender and Andreu Font-Ribera and Jaime E. Forero-Romero and Pablo Fosalba and Carlos S. Frenk and Michele Fumagalli and Boris T. Gaensicke and Giuseppe Gallo and Juan Garcia-Bellido and Enrique Gaztanaga and Nicola Pietro Gentile Fusillo and Terry Gerard and Irena Gershkovich and Tommaso Giannantonio and Denis Gillet and Guillermo Gonzalez-de-Rivera and Violeta Gonzalez-Perez and Shelby Gott and Or Graur and Gaston Gutierrez and Julien Guy and Salman Habib and Henry Heetderks and Ian Heetderks and Katrin Heitmann and Wojciech A. Hellwing and David A. Herrera and Shirley Ho and Stephen Holland and Klaus Honscheid and Eric Huff and Timothy A. Hutchinson and Dragan Huterer and Ho Seong Hwang and Joseph Maria Illa Laguna and Yuzo Ishikawa and Dianna Jacobs and Niall Jeffrey and Patrick Jelinsky and Elise Jennings and Linhua Jiang and Jorge Jimenez and Jennifer Johnson and Richard Joyce and Eric Jullo and Stéphanie Juneau and Sami Kama and Armin Karcher and Sonia Karkar and Robert Kehoe and Noble Kennamer and Stephen Kent and Martin Kilbinger and Alex G. Kim and David Kirkby and Theodore Kisner and Ellie Kitanidis and Jean-Paul Kneib and Sergey Koposov and Eve Kovacs and Kazuya Koyama and Anthony Kremin and Richard Kron and Luzius Kronig and Andrea Kueter-Young and Cedric G. Lacey and Robin Lafever and Ofer Lahav and Andrew Lambert and Michael Lampton and Martin Landriau and Dustin Lang and Tod R. Lauer and Jean-Marc Le Goff and Laurent Le Guillou and Auguste Le Van Suu and Jae Hyeon Lee and Su-Jeong Lee and Daniela Leitner and Michael Lesser and Michael E. Levi and Benjamin L'Huillier and Baojiu Li and Ming Liang and Huan Lin and Eric Linder and Sarah R. Loebman and Zarija Lukić and Jun Ma and Niall MacCrann and Christophe Magneville and Laleh Makarem and Marc Manera and Christopher J. Manser and Robert Marshall and Paul Martini and Richard Massey and Thomas Matheson and Jeremy McCauley and Patrick McDonald and Ian D. McGreer and Aaron Meisner and Nigel Metcalfe and Timothy N. Miller and Ramon Miquel and John Moustakas and Adam Myers and Milind Naik and Jeffrey A. Newman and Robert C. Nichol and Andrina Nicola and Luiz Nicolati da Costa and Jundan Nie and Gustavo Niz and Peder Norberg and Brian Nord and Dara Norman and Peter Nugent and Thomas O'Brien and Minji Oh and Knut A. G. Olsen and Cristobal Padilla and Hamsa Padmanabhan and Nikhil Padmanabhan and Nathalie Palanque-Delabrouille and Antonella Palmese and Daniel Pappalardo and Isabelle Pâris and Changbom Park and Anna Patej and John A. Peacock and Hiranya V. Peiris and Xiyan Peng and Will J. Percival and Sandrine Perruchot and Matthew M. Pieri and Richard Pogge and Jennifer E. Pollack and Claire Poppett and Francisco Prada and Abhishek Prakash and Ronald G. Probst and David Rabinowitz and Anand Raichoor and Chang Hee Ree and Alexandre Refregier and Xavier Regal and Beth Reid and Kevin Reil and Mehdi Rezaie and Constance M. Rockosi and Natalie Roe and Samuel Ronayette and Aaron Roodman and Ashley J. Ross and Nicholas P. Ross and Graziano Rossi and Eduardo Rozo and Vanina Ruhlmann-Kleider and Eli S. Rykoff and Cristiano Sabiu and Lado Samushia and Eusebio Sanchez and Javier Sanchez and David J. Schlegel and Michael Schneider and Michael Schubnell and Aurélia Secroun and Uros Seljak and Hee-Jong Seo and Santiago Serrano and Arman Shafieloo and Huanyuan Shan and Ray Sharples and Michael J. Sholl and William V. Shourt and Joseph H. Silber and David R. Silva and Martin M. Sirk and Anze Slosar and Alex Smith and George F. Smoot and Debopam Som and Yong-Seon Song and David Sprayberry and Ryan Staten and Andy Stefanik and Gregory Tarle and Suk Sien Tie and Jeremy L. Tinker and Rita Tojeiro and Francisco Valdes and Octavio Valenzuela and Monica Valluri and Mariana Vargas-Magana and Licia Verde and Alistair R. Walker and Jiali Wang and Yuting Wang and Benjamin A. Weaver and Curtis Weaverdyck and Risa H. Wechsler and David H. Weinberg and Martin White and Qian Yang and Christophe Yeche and Tianmeng Zhang and Gong-Bo Zhao and Yi Zheng and Xu Zhou and Zhimin Zhou and Yaling Zhu and Hu Zou and Ying Zu},
+      year={2016},
+      eprint={1611.00036},
+      archivePrefix={arXiv},
+      primaryClass={astro-ph.IM}
+}
+
+@article{Hsiao2007,
+  doi = {10.1086/518232},
+  url = {https://doi.org/10.1086/518232},
+  year = {2007},
+  month = jul,
+  publisher = {American Astronomical Society},
+  volume = {663},
+  number = {2},
+  pages = {1187--1200},
+  author = {E. Y. Hsiao and A. Conley and D. A. Howell and M. Sullivan and C. J. Pritchet and R. G. Carlberg and P. E. Nugent and M. M. Phillips},
+  title = {$\less$i$\greater$K$\less$/i$\greater$-Corrections and Spectral Templates of Type Ia Supernovae},
+  journal = {The Astrophysical Journal}
+}
+
+
+@misc{sncosmo,
+  doi = {10.5281/ZENODO.168220},
+  url = {https://zenodo.org/record/168220},
+  author = {Barbary,  Kyle and {Rbiswas4} and Goldstein,  Danny and Rodney,  Steve and {Saurabh W Jha} and Wood-Vasey,  Michael and Sofiatti,  Caroline and Feindt,  Ulrich and Friesen,  Brian and Barclay,  Tom and {R. C. Thomas} and Craig,  Matt and Barentsen,  Geert},
+  title = {sncosmo/sncosmo: v1.4.0},
+  publisher = {Zenodo},
+  year = {2016},
+  copyright = {Open Access}
+}
+
+
+@article{Vincenzi2019,
+	abstract = {{The design and analysis of time-domain sky surveys require the ability to simulate accurately realistic populations of core-collapse supernova (SN) events. We present a set of spectral time-series templates designed for this purpose, for both hydrogen-rich (Type II, IIn, and IIb) and stripped-envelope (Type Ib, Ic, and Ic-BL) core-collapse SNe. We use photometric and spectroscopic data for 67 core-collapse SNe from the literature, and for each generate a time-series spectral template. The techniques used to build the templates are fully data driven with no assumption of any parametric form or model for the light curves. The template-building code is open source, and can be applied to any transient for which well-sampled multiband photometry and multiple spectroscopic observations are available. We extend these spectral templates into the near-ultraviolet to λ ≃ 1600 {\AA} using observer-frame ultraviolet photometry. We also provide a set of templates corrected for host galaxy dust extinction, and provide a set of luminosity functions that can be used with our spectral templates in simulations. We give an example of how these templates can be used by integrating them within the popular SN simulation package snana, and simulating core-collapse SNe in photometrically selected cosmological Type Ia SN samples, prone to contamination from core-collapse events.}},
+	author = {Vincenzi, M and Sullivan, M and Firth, R E and Guti{\'e}rrez, C P and Frohmaier, C and Smith, M and Angus, C and Nichol, R C},
+	doi = {10.1093/mnras/stz2448},
+	eprint = {https://academic.oup.com/mnras/article-pdf/489/4/5802/30097806/stz2448.pdf},
+	issn = {0035-8711},
+	journal = {Monthly Notices of the Royal Astronomical Society},
+	month = {09},
+	number = {4},
+	pages = {5802-5821},
+	title = {{Spectrophotometric templates for core-collapse supernovae and their application in simulations of time-domain surveys}},
+	url = {https://doi.org/10.1093/mnras/stz2448},
+	volume = {489},
+	year = {2019},
+	bdsk-url-1 = {https://doi.org/10.1093/mnras/stz2448}}
+
+@article{Zhao_2006,
+doi = {10.1088/1009-9271/6/5/17},
+url = {https://dx.doi.org/10.1088/1009-9271/6/5/17},
+year = {2006},
+month = {oct},
+publisher = {},
+volume = {6},
+number = {5},
+pages = {635},
+author = {Fu-Yuan Zhao and  R. G. Strom and  Shi-Yang Jiang},
+title = {The Guest Star of AD185 must have been a Supernova},
+journal = {Chinese Journal of Astronomy and Astrophysics },
+}
+
+
+@book{nielsen2015,
+	author = {{Neilsen}, Michael A.},
+	date-added = {2023-05-05 02:05:38 -0400},
+	date-modified = {2023-05-05 02:06:43 -0400},
+	publisher = {Determination Press},
+	title = {Neural Networks and Deep Learning},
+	year = {2015}}
