--- a/references.bib
+++ b/references.bib
@@ -231,7 +231,7 @@
 }
 
 @article{Pence2010,
-  author       = {{Pence, W. D.} and {Chiappetti, L.} and {Page, C. G.} and {Shaw, R. A.} and {Stobie, E.}},
+  author       = {Pence, W. D. and Chiappetti, L. and Page, C. G. and Shaw, R. A. and Stobie, E.},
   url          = {https://doi.org/10.1051/0004-6361/201015362},
   date         = {2010-11},
   doi          = {10.1051/0004-6361/201015362},
@@ -258,7 +258,7 @@
   author       = {{Zwicky}, F.},
   date         = {1938-12},
   doi          = {10.1086/144007},
-  journaltitle = {\apj},
+  journaltitle = {ApJ},
   pages        = {529},
   title        = {{On the Frequency of Supernovae.}},
   volume       = {88},
@@ -279,7 +279,7 @@
   author       = {{Schaefer}, Bradley E.},
   date         = {1995-07},
   doi          = {10.1086/309549},
-  journaltitle = {\apjl},
+  journaltitle = {ApJ},
   keywords     = {COSMOLOGY: OBSERVATIONS,COSMOLOGY: DISTANCE SCALE,GALAXIES: INDIVIDUAL NGC NUMBER: NGC 5253,STARS: SUPERNOVAE: INDIVIDUAL ALPHANUMERIC: SN 1895B},
   pages        = {L13},
   title        = {{The Peak Brightness of SN 1895B in NGC 5253 and the Hubble Constant}},
@@ -290,7 +290,7 @@
   author       = {{de Vaucouleurs}, G. and {Corwin}, H. G., Jr.},
   date         = {1985-08},
   doi          = {10.1086/163374},
-  journaltitle = {\apj},
+  journaltitle = {ApJ},
   keywords     = {Andromeda Galaxy,Light Curve,Supernovae,Reference Stars,Stellar Color,Stellar Magnitude,Stellar Spectra,Supernova Remnants,Wavelengths,Astrophysics},
   pages        = {287},
   title        = {{S Andromedae 1885: A Centennial Review}},
@@ -329,7 +329,7 @@
   author       = {{Minkowski}, R.},
   date         = {1941-08},
   doi          = {10.1086/125315},
-  journaltitle = {\pasp},
+  journaltitle = {PASP},
   number       = {314},
   pages        = {224},
   title        = {{Spectra of Supernovae}},
@@ -352,7 +352,7 @@
   author       = {{Filippenko}, Alexei V.},
   date         = {1997-01},
   doi          = {10.1146/annurev.astro.35.1.309},
-  journaltitle = {\araa},
+  journaltitle = {Ann. Rev. Astron. Astrophys.},
   pages        = {309--355},
   title        = {{Optical Spectra of Supernovae}},
   volume       = {35},
@@ -365,7 +365,7 @@
   eprint       = {astro-ph/9505023},
   eprintclass  = {astro-ph},
   eprinttype   = {arXiv},
-  journaltitle = {\apjl},
+  journaltitle = {ApJl},
   keywords     = {Cosmology,Deceleration,Error Analysis,Red Shift,Supernovae,Charge Coupled Devices,Dark Matter,Light Curve,Stellar Spectrophotometry,Astrophysics,Astrophysics},
   pages        = {L41},
   title        = {{A Supernova at Z = 0.458 and Implications for Measuring the Cosmological Deceleration}},
@@ -403,7 +403,7 @@
   eprint       = {2102.03780},
   eprintclass  = {astro-ph.GA},
   eprinttype   = {arXiv},
-  journaltitle = {\mnras},
+  journaltitle = {MNRAS},
   keywords     = {methods: statistical,techniques: image processing,surveys,radio continuum: galaxies,Astrophysics - Astrophysics of Galaxies},
   number       = {2},
   pages        = {1828--1846},
@@ -487,7 +487,7 @@
   number = {2},
   pages = {1187--1200},
   author = {E. Y. Hsiao and A. Conley and D. A. Howell and M. Sullivan and C. J. Pritchet and R. G. Carlberg and P. E. Nugent and M. M. Phillips},
-  title = {$\less$i$\greater$K$\less$/i$\greater$-Corrections and Spectral Templates of Type Ia Supernovae},
+  title = {$K$-Corrections and Spectral Templates of Type Ia Supernovae},
   journal = {The Astrophysical Journal}
 }
 
@@ -551,3 +551,113 @@ year = {2019},
 publisher = {Curran Associates, Inc.}, 
 url = {http://papers.neurips.cc/paper/9015-pytorch-an-imperative-style-high-performance-deep-learning-library.pdf} 
 }
+
+@ARTICLE{Madgwick2003,
+       author = {{Madgwick}, Darren S. and {Hewett}, Paul C. and {Mortlock}, Daniel J. and {Wang}, Lifan},
+        title = "{Spectroscopic Detection of Type Ia Supernovae in the Sloan Digital Sky Survey}",
+      journal = {ApJ},
+     keywords = {Methods: Data Analysis, Stars: Supernovae: General, Astrophysics},
+         year = 2003,
+        month = dec,
+       volume = {599},
+       number = {1},
+        pages = {L33-L36},
+          doi = {10.1086/381081},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0310887},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2003ApJ...599L..33M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Graur2013,
+       author = {{Graur}, Or and {Maoz}, Dan},
+        title = "{Discovery of 90 Type Ia supernovae among 700 000 Sloan spectra: the Type Ia supernova rate versus galaxy mass and star formation rate at redshift {\ensuremath{\sim}}0.1}",
+      journal = {MNRAS},
+     keywords = {methods: observational, surveys, supernovae: general, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2013,
+        month = apr,
+       volume = {430},
+       number = {3},
+        pages = {1746-1763},
+          doi = {10.1093/mnras/sts718},
+archivePrefix = {arXiv},
+       eprint = {1209.0008},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013MNRAS.430.1746G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Baron2017,
+       author = {{Baron}, Dalya and {Poznanski}, Dovi},
+        title = "{The weirdest SDSS galaxies: results from an outlier detection algorithm}",
+      journal = {MNRAS},
+     keywords = {methods: data analysis, methods: statistical, galaxies: general, galaxies: peculiar, Astrophysics - Astrophysics of Galaxies},
+         year = 2017,
+        month = mar,
+       volume = {465},
+       number = {4},
+        pages = {4530-4555},
+          doi = {10.1093/mnras/stw3021},
+archivePrefix = {arXiv},
+       eprint = {1611.07526},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017MNRAS.465.4530B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Muthukrishna2019,
+       author = {{Muthukrishna}, Daniel and {Parkinson}, David and {Tucker}, Brad E.},
+        title = "{DASH: Deep Learning for the Automated Spectral Classification of Supernovae and Their Hosts}",
+      journal = {ApJ},
+     keywords = {methods: data analysis, methods: statistical, supernovae: general, surveys, techniques: spectroscopic, Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2019,
+        month = nov,
+       volume = {885},
+       number = {1},
+          eid = {85},
+        pages = {85},
+          doi = {10.3847/1538-4357/ab48f4},
+archivePrefix = {arXiv},
+       eprint = {1903.02557},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019ApJ...885...85M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Davison2022,
+       author = {{Davison}, William and {Parkinson}, David and {Tucker}, Brad E.},
+        title = "{STag: Supernova Tagging and Classification}",
+      journal = {ApJ},
+     keywords = {1933, 1668, 253, 1882, 1866, 1855, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2022,
+        month = feb,
+       volume = {925},
+       number = {2},
+          eid = {186},
+        pages = {186},
+          doi = {10.3847/1538-4357/ac3422},
+archivePrefix = {arXiv},
+       eprint = {2108.10497},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022ApJ...925..186D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Xiong2020,
+       author = {{Xiong}, Ruibin and {Yang}, Yunchang and {He}, Di and {Zheng}, Kai and {Zheng}, Shuxin and {Xing}, Chen and {Zhang}, Huishuai and {Lan}, Yanyan and {Wang}, Liwei and {Liu}, Tie-Yan},
+        title = "{On Layer Normalization in the Transformer Architecture}",
+      journal = {arXiv e-prints},
+     keywords = {Computer Science - Machine Learning, Computer Science - Computation and Language, Statistics - Machine Learning},
+         year = 2020,
+        month = feb,
+          eid = {arXiv:2002.04745},
+        pages = {arXiv:2002.04745},
+          doi = {10.48550/arXiv.2002.04745},
+archivePrefix = {arXiv},
+       eprint = {2002.04745},
+ primaryClass = {cs.LG},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020arXiv200204745X},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
