--- a/structure/acknowledgements.tex
+++ b/structure/acknowledgements.tex
@@ -1,7 +1,30 @@
-\chapter*{\centerline{Acknowledgments}}
+\chapter*{\centerline{Acknowledgments}\vspace{-3cm}}
 \markboth{\MakeUppercase{Acknowledgments}}{}
 \iftoggle{fulltoc}{
   \addcontentsline{toc}{chapter}{Acknowledgments}
 }{}
+My time at the University of Rochester was impacted by so many people, but as I finish writing 
+this 50 page summary of the past year of research, I am reminded of those who made it truly special.
 
-Consider adding acknowledgements. 
+First and foremost I want to thank the Department of Physics and Astronomy for providing a nurturing 
+environment over the past four years, in and out of the COVID-19 pandemic. I commonly refer to B\&L and the POA as my second home,
+and without the efforts of each and every professor, administrator, and faculty member, my experience would simply 
+have not been the same. 
+
+I would also like to thank Professor Segev BenZvi for his patience and intuition during the past year. 
+He has been an absolute pleasure to work with, both in person and online, and he continues to fascinate 
+me with the passion he brings to every meeting. He has shown me what true dedication to a field is, 
+and one day I hope to impact someones life as he has impacted mine. 
+
+Professor Kelly Douglass was the first professor at the University of Rochester I had the 
+pleasure of meeting, providing me with words of wisdom after the first 
+college lecture I ever attended  (during a tour of the school). She continued to offer 
+insight and advice throughout my four years studying physics and astronomy, and she has been the 
+image of a fair, caring professor ever since I first walked into her classroom. 
+
+Thank you to my father and mother, Salvatore and Gigi LaBarca, for their ongoing and unending support of my work and my sisters,
+Marisa and Carrie, who always find a way to make me laugh and strive for greatness. Thank you to my friends on campus and at home
+who deal with my egregiously packed school-music-ultimate schedule, and my peers, too numerous to 
+mention by name, who shared scientific advice and late nights together. Finally, thank you to Grace, for all of
+our astronomy discussions, but more importantly, for reminding me that there are always 5 minutes 
+in a day to enjoy the company of those you love. 
