--- a/structure/dedication.tex
+++ b/structure/dedication.tex
@@ -4,7 +4,8 @@
   \vspace*{\fill}
 
   \it%
-  For someone a long time ago, in a galaxy far, far away...
+  % For someone a long time ago, in a galaxy far, far away...
+  For Nonni, who never let me loose sight of what is important in life
 
   \vspace*{\fill}
 \end{center}
