--- a/structure/title.tex
+++ b/structure/title.tex
@@ -2,7 +2,7 @@
   \vspace*{\fill}
 
   \begin{center}
-    {\Huge Adoption of the Transformer Architecture \\for Supernovae Detection in the DESI Survey\par
+    {\Huge Adoption of the Transformer Architecture \\for Supernova Detection\\ in the DESI Survey\par
     }
 
     \bigskip%
