--- a/main.tex
+++ b/main.tex
@@ -12,6 +12,7 @@
 \input{tikzconfig}    % Configuration for drawing
 \usepackage{comment}  % For commenting out block text
 \usepackage{lineno}
+\usepackage{booktabs}           % makes tables look good
 % \preto{\chapter}{\resetlinenumber}
 
 
