--- a/uorthesis.sty
+++ b/uorthesis.sty
@@ -33,9 +33,8 @@
 \usepackage{xcolor}
 \definecolor{darkblue}{rgb}{0, 0, 0.5}
 \usepackage[colorlinks=true, allcolors=darkblue, draft=false]{hyperref}           % Adds hyperlinks in the pdf 
-
-\usepackage{csquotes}           % Makes quotes look good
-\usepackage[font=small,labelfont={bf,sf}, textfont={sf}, justification=centering]{caption}
+% \usepackage{csquotes}           % Makes quotes look good
+% \usepackage[font=small,labelfont={bf,sf}, textfont={sf}, justification=centering]{caption}
 \usepackage{graphicx, subcaption, float}
 \usepackage{amsmath, amssymb, amsthm}
 
